--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Flex Layout Home</title>
-    <link rel="stylesheet" type="text/css" href="./CSS/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>         
@@ -16,35 +16,40 @@
             <a href="#sections" class="link-buttom">Read More</a>
         </div>
     </header>    
-    <section class="content">
-        <h2 class="columns-h2">Web & Application Development</h2>
-        <div class="columns-content">        
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet sed nobis, corporis fuga quia, ipsa ut voluptatum sapiente neque odio omnis totam suscipit? Dolor et fuga dignissimos, sapiente ducimus deleniti. Molestiae harum eligendi ea cupiditate aut voluptates dolore fugit voluptatem.            
-        </div>
-    </section>
-    <section class="grey-container">
-        <div class="section-content" id="sections">
-            <img src="/images/img-1.jpeg" alt="Web Image">
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ea eos libero dicta quibusdam earum corrupti nesciunt et harum repellendus.</p>            
-        </div>
-        <div class="section-content">
-            <img src="/images/img-2.jpeg" alt="Mobile Image">
-                <h3>Mobile Applications</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas deserunt sequi velit provident recusandae ad corporis itaque cum vero perferendis!</p>            
-        </div>
-        <div class="section-content">
-            <img src="/images/img-3.jpeg" alt="Tech Image">
-                <h3>Tech Marketing</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur modi quia similique repudiandae in odit dolores, voluptate aperiam nihil odio.</p>            
-        </div>
-    </section>
 
-    <h2 class="columns-h2">We handle all of your digital needs</h2>
-    <div class="centered-content">        
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis soluta ducimus sint aliquid laborum ipsa perspiciatis error dicta odio non!
-        </p>       
-    </div>
+    <main>
+        <section class="content">
+            <h2 class="columns-h2">Web & Application Development</h2>
+            <div class="columns-content">        
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet sed nobis, corporis fuga quia, ipsa ut voluptatum sapiente neque odio omnis totam suscipit? Dolor et fuga dignissimos, sapiente ducimus deleniti. Molestiae harum eligendi ea cupiditate aut voluptates dolore fugit voluptatem.            
+            </div>
+        </section>
+        <section class="grey-container">
+            <h6 style="visibility: hidden;">Formal Header</h6>
+            <article class="section-content" id="sections">
+                <img src="/images/img-1.jpeg" alt="Web Image">
+                    <h3>Web Development</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ea eos libero dicta quibusdam earum corrupti nesciunt et harum repellendus.</p>            
+            </article>
+            <article class="section-content">
+                <img src="/images/img-2.jpeg" alt="Mobile Image">
+                    <h3>Mobile Applications</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas deserunt sequi velit provident recusandae ad corporis itaque cum vero perferendis!</p>            
+            </article>
+            <article class="section-content">
+                <img src="/images/img-3.jpeg" alt="Tech Image">
+                    <h3>Tech Marketing</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur modi quia similique repudiandae in odit dolores, voluptate aperiam nihil odio.</p>            
+            </article>
+        </section>
+
+        <h2 class="columns-h2">We handle all of your digital needs</h2>
+        <div class="centered-content">        
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis soluta ducimus sint aliquid laborum ipsa perspiciatis error dicta odio non!
+            </p>       
+        </div>
+    </main>
+
     <section class="container">
         <div class="contact">
             <h2>Contact Us</h2>
@@ -56,7 +61,7 @@
             <h2>About Company</h2>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Non praesentium impedit suscipit culpa incidunt? Deleniti fuga harum dolorum neque. Ratione!</p>
         </div>
-    </section>
+    </section>   
     
     <footer>
         <div class="footer-left">Acme Web Solutions</div>
